deployment/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-reviews-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-websockets: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - movie-reviews-tracker.lab.sspcloud.fr
        - api-movie-reviews-tracker.lab.sspcloud.fr
  rules:
    - host: movie-reviews-tracker.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-reviews-dashboard-service
                port:
                  number: 80
    - host: api-movie-reviews-tracker.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-reviews-api-service
                port:
                  number: 80
